--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "enzyme": "^2.9.1",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-fade-in": "^0.1.4",
     "react-scripts": "0.9.0",
     "react-test-renderer": "^15.6.1"
   },
